# bbchop

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
BBChop/: INSTALL
BBChop/source/: BBChop.py  bbchop  cse.py  dag.py  evidence.py  likelihoods.py  listUtils.py  skipProbability.py
BBChop/tests/: BBChopTest.py  cseTest.py  dumbdag.py  entropiesTest.py  randomdag.py  testCases.py  testDagRead.py  testDetector.py  testdag.py
