[build-system]
requires = ["setuptools>=40.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbchop"
version = "0.1.0"
description = "Bisection algorithm which works on intermittent bugs"
readme = "README"
requires-python = ">=2.6"
license = "GPL-2.0-or-later"
authors = [
    {name = "Ealdwulf Wuffinga"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
fast = ["mpmath"]

[project.urls]
Homepage = "https://github.com/mdellison90-stack/bbchop"
